--- a/snippets-ml/00001-ml-liear-regression.ipynb
+++ b/snippets-ml/00001-ml-liear-regression.ipynb
@@ -83,6 +83,7 @@
    "source": [
     "# 将数据转换为Tensor\n",
     "import torch\n",
+    "# noinspection PyPep8Naming\n",
     "import torch.utils.data as Data\n",
     "from torch import nn\n",
     "\n",
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -133,14 +134,14 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='43023433-8aa1-47ff-9e43-bcd627bb692a'></div>"
+      "text/html": "<div id='cbc88f31-bad0-4c9a-9234-40f003b35bed'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    "% matplotlib notebook\n",
+    "%matplotlib notebook\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "# 创建一个三维图\n",
@@ -185,15 +186,29 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 求解过程及动画演示\n",
+    "- 为了方便展示二维曲面求解效果, 省略了截距项的求解, 仅展示二维系数的求解\n",
+    "- 为了动画展示效果对学习率做了加速"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta: [2.04054768 2.58265021]\n",
-      "cost: 0.40928617802839895\n"
+      "weight: [ 1.93819189 -3.31285146], intercept(constant): 4.2\n",
+      "Predicted value of y for x = [3, 5]: -6.54968163998134\n"
      ]
     },
     {
@@ -207,7 +222,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div id='5522a08f-9f24-4bfc-a289-580c4c791d33'></div>"
+      "text/html": "<div id='038ad19c-07d4-428e-8acc-de2d282fff15'></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -215,48 +230,109 @@
    ],
    "source": [
     "%matplotlib notebook\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import matplotlib.animation as animation\n",
     "\n",
-    "# 定义数据集\n",
-    "X = np.array([[1, 1], [1, 2], [2, 2], [2, 3]])\n",
-    "y = np.dot(X, np.array([1, 2])) + 3\n",
+    "# 设置学习率、迭代次数和绘制的点数\n",
+    "learning_rate = 0.001\n",
+    "iterations = 400\n",
     "\n",
-    "# 定义模型参数\n",
-    "theta = np.zeros(2)\n",
     "\n",
-    "# 定义学习率和迭代次数\n",
-    "alpha = 0.01\n",
-    "num_iters = 1000\n",
+    "# 定义损失函数\n",
+    "# noinspection PyShadowingNames\n",
+    "def loss_func(x, y, theta):\n",
+    "    y_pred = np.dot(x, theta) + 4.2\n",
+    "    return np.mean((y_pred - y)**2) / 2\n",
     "\n",
-    "# 定义代价函数\n",
-    "# noinspection PyPep8Naming,PyShadowingNames\n",
-    "def compute_cost(X, y, theta):\n",
-    "    m = len(y)\n",
-    "    J = 1 / (2 * m) * np.sum((np.dot(X, theta) - y) ** 2)\n",
-    "    return J\n",
     "\n",
-    "# 梯度下降\n",
-    "# noinspection PyPep8Naming,PyShadowingNames\n",
-    "def gradient_descent(X, y, theta, alpha, num_iters):\n",
-    "    m = len(y)\n",
-    "    J_history = np.zeros(num_iters)\n",
-    "    for i in range(num_iters):\n",
-    "        theta = theta - alpha / m * np.dot(X.T, np.dot(X, theta) - y)\n",
-    "        J_history[i] = compute_cost(X, y, theta)\n",
-    "    return theta, J_history\n",
+    "# 定义梯度下降函数\n",
+    "# noinspection PyShadowingNames,PyPep8Naming\n",
+    "def gradient_descent(x, y, theta, learning_rate, iterations):\n",
+    "    theta_list = np.zeros((iterations, 2))\n",
+    "    J_history = np.zeros(iterations)\n",
+    "    for i in range(iterations):\n",
+    "        y_pred = np.dot(x, theta) + 4.2\n",
+    "        loss = loss_func(x, y, theta)\n",
+    "        theta_list[i] = theta\n",
+    "        J_history[i] = loss\n",
+    "        # 梯度下降迭代\n",
+    "        gradient = np.dot(x.T, (y_pred - y)) / len(y)\n",
+    "        theta = theta - learning_rate * gradient\n",
+    "        # 学习率加速, 否则到了接近曲面底部的时候学习起来太慢, 动画展示时间太长\n",
+    "        if (i + 1) % 10 == 0:\n",
+    "            learning_rate = learning_rate * 1.1\n",
+    "    return theta_list, J_history\n",
     "\n",
-    "# 进行梯度下降算法求解\n",
-    "theta, J_history = gradient_descent(X, y, theta, alpha, num_iters)\n",
+    "# 执行梯度下降算法\n",
+    "X = features\n",
+    "theta = np.array([-4.0, 3.5])\n",
+    "theta_list, loss_list = gradient_descent(X, labels, theta, learning_rate, iterations)\n",
     "\n",
-    "# 打印最终的模型参数和代价函数值\n",
-    "print('theta:', theta)\n",
-    "print('cost:', J_history[-1])\n",
+    "# 梯度求解结果\n",
+    "print(f'weight: {theta_list[-1]}, intercept(constant): 4.2')\n",
     "\n",
-    "# 绘制代价函数值随迭代次数的变化\n",
-    "plt.plot(J_history)\n",
-    "plt.xlabel('Iteration')\n",
-    "plt.ylabel('Cost')\n",
+    "# 预测新数据示例\n",
+    "x_to_predict = np.array([3, 5])\n",
+    "y_prediction = np.dot(x_to_predict, theta_list[-1]) + 4.2\n",
+    "print(f\"Predicted value of y for x = [3, 5]: {y_prediction}\")\n",
+    "\n",
+    "# 绘制2维动画\n",
+    "fig = plt.figure(figsize=(10, 5))\n",
+    "ax = fig.add_subplot(121)\n",
+    "text = ax.text(0, 0, 'loss')\n",
+    "line, = ax.plot([], [], lw=2)\n",
+    "\n",
+    "\n",
+    "# noinspection PyShadowingNames\n",
+    "def animate2d(i):\n",
+    "    ydata = loss_list[:i]\n",
+    "    line.set_data(np.arange(len(ydata)), ydata)\n",
+    "    text.set_text('loss=%.4f' % loss_list[i])\n",
+    "    return text, line\n",
+    "\n",
+    "ax.set_xlim(0, iterations * 1.2)\n",
+    "ax.set_ylim(0, np.max(loss_list) + (np.max(loss_list) - np.min(loss_list)) * 0.1)\n",
+    "ax.set_xlabel('Iterations')\n",
+    "ax.set_ylabel('Loss')\n",
+    "ax.set_title('Gradient Descent for Linear Regression')\n",
+    "ani2d = animation.FuncAnimation(fig, animate2d, frames=iterations, interval=30, blit=True)\n",
+    "plt.show()\n",
+    "\n",
+    "ax3d = fig.add_subplot(122, projection='3d')\n",
+    "\n",
+    "# 生成参数网格\n",
+    "theta0_vals = np.linspace(-5, 5, len(X))\n",
+    "theta1_vals = np.linspace(-5, 5, len(X))\n",
+    "theta0_grid, theta1_grid = np.meshgrid(theta0_vals, theta1_vals)\n",
+    "\n",
+    "# 计算对应参数网格上的损失函数值\n",
+    "loss_grid = np.zeros((len(X), len(X)))\n",
+    "for i in range(len(X)):\n",
+    "    for j in range(len(X)):\n",
+    "        loss_grid[j, i] = loss_func(X, labels, np.array([theta0_vals[i], theta1_vals[j]]))\n",
+    "\n",
+    "# 绘制三维曲面\n",
+    "surf = ax3d.plot_surface(theta0_grid, theta1_grid, loss_grid, cmap='coolwarm',\n",
+    "                       linewidth=0, antialiased=False, alpha=0.5)\n",
+    "\n",
+    "# 初始化迭代过程的动画\n",
+    "line3d, = ax3d.plot([], [], [], marker='.', color='green')\n",
+    "\n",
+    "def init3d():\n",
+    "    line3d.set_data([], [])\n",
+    "    line3d.set_3d_properties([])\n",
+    "    return line3d,\n",
+    "\n",
+    "\n",
+    "# noinspection PyShadowingNames\n",
+    "def animate3d(i):\n",
+    "    line3d.set_data(theta_list[:i, 0], theta_list[:i, 1])\n",
+    "    line3d.set_3d_properties(loss_list[:i])\n",
+    "    return (line3d,)\n",
+    "ani3d = animation.FuncAnimation(fig, animate3d, init_func=init3d,\n",
+    "                              frames=iterations+1, interval=20, blit=True)\n",
+    "\n",
     "plt.show()"
    ],
    "metadata": {
@@ -280,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stderr",
@@ -294,22 +370,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [20/100], Loss: 36.2306\n",
-      "Epoch [40/100], Loss: 36.5180\n",
-      "Epoch [60/100], Loss: 36.4992\n",
-      "Epoch [80/100], Loss: 36.4323\n",
-      "Epoch [100/100], Loss: 36.4000\n",
+      "Epoch [20/100], Loss: 38.0565\n",
+      "Epoch [40/100], Loss: 37.6488\n",
+      "Epoch [60/100], Loss: 37.4463\n",
+      "Epoch [80/100], Loss: 37.4616\n",
+      "Epoch [100/100], Loss: 37.4378\n",
       "number: 0\n",
       "Parameter containing:\n",
-      "tensor([[ 1.9901],\n",
-      "        [-3.4200]], requires_grad=True)\n",
+      "tensor([[ 1.9629],\n",
+      "        [-3.4237]], requires_grad=True)\n",
       "--------------------------------------------------------------------------------\n",
       "number: 1\n",
       "Parameter containing:\n",
-      "tensor(4.3300, requires_grad=True)\n",
+      "tensor(4.1638, requires_grad=True)\n",
       "--------------------------------------------------------------------------------\n",
-      "weight: [[ 1.9901178]\n",
-      " [-3.4200175]], bias: 4.330038547515869\n"
+      "weight: [[ 1.9628869]\n",
+      " [-3.423743 ]], bias: 4.163804531097412\n"
      ]
     }
    ],
