写了一些参数调节方法

--- a/snippets-ml/12-frequent-patterns/associate_rules.ipynb
+++ b/snippets-ml/12-frequent-patterns/associate_rules.ipynb
@@ -418,6 +418,37 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "下面是一些调节参数的技巧：\n",
+    "- Support：\n",
+    "支持度是指一个规则在数据集中出现的频率。\n",
+    "在确定支持度的阈值时，应该考虑数据集的大小和规则的复杂度。如果数据集很大，支持度阈值可以设置得较小，以便发现更多的规则。如果数据集较小，阈值应该设置得较高，以便避免过多的无意义规则。\n",
+    "\n",
+    "- Confidence：\n",
+    "置信度是指当条件项出现时，结果项也会出现的概率。\n",
+    "置信度的阈值应该根据具体情况来确定。如果要找到比较强的规则，阈值应该设置得高一些。如果希望发现更多的规则，则应该设置得低一些。\n",
+    "\n",
+    "- Lift：\n",
+    "提升度是指条件项和结果项之间的关系与它们之间的随机关系之比。\n",
+    "当提升度大于1时，说明条件项和结果项之间存在正相关关系；当提升度小于1时，说明它们之间存在负相关关系；当提升度等于1时，说明它们之间没有关系。可以通过设置提升度的阈值来筛选规则。\n",
+    "\n",
+    "- Leverage：\n",
+    "杠杆值是指条件项和结果项同时出现的频率与它们分别独立出现的频率之差。\n",
+    "杠杆值的绝对值越大，说明条件项和结果项之间的关联程度越高。可以通过设置杠杆值的阈值来筛选规则。\n",
+    "\n",
+    "- Conviction：\n",
+    "确信度是指条件项和结果项之间的独立性度量，即结果项不受条件项影响的概率与实际情况下结果项不受条件项影响的概率之比。\n",
+    "当确信度大于1时，说明条件项和结果项之间的关系是真实存在的；当确信度小于1时，说明它们之间存在相反的关系。可以通过设置确信度的阈值来筛选规则。"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
