--- a/snippets-ml/02-regression/0002-factorized-machine.ipynb
+++ b/snippets-ml/02-regression/0002-factorized-machine.ipynb
@@ -35,25 +35,133 @@
     "& \\sum_{i=1}^{p} \\sum_{j=i+1}^p\\left\\langle\\mathbf{v}_i, \\mathbf{v}_j\\right\\rangle x_i x_j \\\\\n",
     "= & \\frac{1}{2} \\sum_{i=1}^p \\sum_{j=1}^p\\left\\langle\\mathbf{v}_i, \\mathbf{v}_j\\right\\rangle x_i x_j-\\frac{1}{2} \\sum_{i=1}^p\\left\\langle\\mathbf{v}_i, \\mathbf{v}_i\\right\\rangle x_i x_i \\\\\n",
     "= & \\frac{1}{2}\\left(\\sum_{i=1}^p \\sum_{j=1}^p \\sum_{f=1}^k v_{i, f} v_{j, f} x_i x_j-\\sum_{i=1}^p \\sum_{f=1}^k v_{i, f} v_{i, f} x_i x_i\\right) \\\\\n",
-    "= & \\frac{1}{2} \\sum_{f=1}^k\\left(\\left(\\sum_{i=1}^n v_{i, f} x_i\\right)\\left(\\sum_{j=1}^n v_{j, f} x_j\\right)-\\sum_{i=1}^n v_{i, f}^2 x_i^{2}\\right) \\\\\n",
-    "= & \\frac{1}{2} \\sum_{f=1}^k\\left(\\left ( \\sum_{i=1}^n v_{i, f} x_i \\right)^{2}-\\sum_{i=1}^n v_{i, f}^2 x_i^{2}\\right)\n",
+    "= & \\frac{1}{2} \\sum_{f=1}^k\\left(\\left(\\sum_{i=1}^{p} v_{i, f} x_i\\right)\\left(\\sum_{j=1}^{p} v_{j, f} x_j\\right)-\\sum_{i=1}^{p} v_{i, f}^2 x_i^{2}\\right) \\\\\n",
+    "= & \\frac{1}{2} \\sum_{f=1}^k\\left(\\left ( \\sum_{i=1}^{p} v_{i, f} x_i \\right)^{2}-\\sum_{i=1}^{p} v_{i, f}^2 x_i^{2}\\right)\n",
     "\\end{aligned}\n",
-    "$$\n",
-    "\n",
-    "矩阵表示:\n",
-    "$$\n",
-    "\\sum_{i=1}^{n} \\sum_{j=i+1}^{n} \\langle \\textbf v_i, \\textbf v_j \\rangle x_i x_j =\n",
-    "\\frac{1}{2} \\sum_{f=1}^{k} \\Big( \\big(\\sum_{i=1}^{n} v_f^{(i)} x_i \\big)^2 - \\sum_{i=1}^{n}v_f^{(i) 2} x_i^2 \\Big) =\n",
-    "\\frac{1}{2} \\sum_{f=1}^{} \\Big( S_{1,f}^2 - S_{2,f} \\Big) =\n",
-    "\\frac{1}{2} \\Big( S_{1}^2 - S_{2} \\Big)\n",
-    "$$\n",
-    "其中:\n",
-    "- $S_{1}$表示$VX$沿第一个维度求和: $S_1 = \\sum_{i=1}^{n} v_f^{(i)} x_i $\n"
+    "$$\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "上述为y关于x的分布的表达式（还缺一个残差项，如正态分布的残差）。\n",
+    "下面我们将上述表达式以样本形式矩阵化，方便机器学习和深度学习引擎求解，通过下面几步阐述：\n",
+    "step 1)假定共有$n$个样本，即$X \\in \\mathbb{R}^{n \\times p}$，$Y \\in \\mathbb{R}^{n}$\n",
+    "$$\n",
+    "X = \\begin{bmatrix}\n",
+    "x_1^{(1)} & \\dots & x_p^{(1)}\\\\\n",
+    " \\vdots \\ & \\ddots \\ & \\vdots \\\\\n",
+    "x_1^{(n)} & \\dots & x_p^{(n)} \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "step 2)$V \\in \\mathbb{R}^{p \\times k}$\n",
+    "$$\n",
+    "V = \\begin{bmatrix}\n",
+    "v_1^{(1)} & \\dots & v_k^{(1)}\\\\\n",
+    " \\vdots \\ & \\ddots \\ & \\vdots \\\\\n",
+    "v_1^{(p)} & \\dots & v_k^{(p)} \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "step 3)Y的交叉项$Y_{inter}$\n",
+    "\n",
+    "$$\n",
+    "Y_{inter} = \\sum_{i=1}^{p} \\sum_{j=i+1}^{p} \\langle \\textbf v_i, \\textbf v_j \\rangle \\vec{x_i} \\odot \\vec{x_j}  \\\\\n",
+    "= \\frac{1}{2} \\sum_{f=1}^{k} \\Big( \\big(\\sum_{i=1}^{p} v_f^{(i)} \\vec{x_i} \\big)^2 - \\sum_{i=1}^{p}v_f^{(i) 2} \\vec{x_i}^2 \\Big) \\\\\n",
+    "= \\frac{1}{2} \\sum_{f=1}^{k}  \\big(\\sum_{i=1}^{p} v_f^{(i)} \\vec{x_i} \\big)^2 -\n",
+    "\\frac{1}{2} \\sum_{f=1}^{k}  \\big( \\sum_{i=1}^{p}v_f^{(i) 2} \\vec{x_i}^2 \\big)\n",
+    "$$\n",
+    "\n",
+    "注意：\n",
+    "- 此处$\\vec{x_i} $表示向量，$\\vec{x_i} \\in \\mathbb{R}^{n \\times 1}$\n",
+    "- $\\odot$表示元素乘法(element wise product)，此处平方运算$\\vec{x_i}^{2}$也表示向量的元素级平方操作.\n",
+    "- 记住该公式相减的一部分和第二部分, 后续会用到.\n",
+    "\n",
+    "step4)Y的交叉项可以利用$XV$进一步简化:\n",
+    "$X$和$V$的内积($n*k$维):\n",
+    "$$\n",
+    "XV = \\begin{bmatrix}\n",
+    "\\sum_{i=1}^{p} v_f^{(1)} x_i^{(1)}  & \\dots &  \\sum_{i=1}^{p} v_f^{(k)} x_i^{(1)}\\\\\n",
+    " \\vdots \\ & \\ddots \\ & \\vdots \\\\\n",
+    "\\sum_{i=1}^{p} v_f^{(1)} x_i^{(n)} & \\dots & \\sum_{i=1}^{(n)} v_f^{(k)} x_i^{(n)} \\\\\n",
+    "\\end{bmatrix} =\n",
+    "\\begin{bmatrix}\n",
+    "S_{1,1}^{(1)}  & \\dots &  S_{1,k}^{(1)}\\\\\n",
+    " \\vdots \\ & \\ddots \\ & \\vdots \\\\\n",
+    "S_{1,1}^{(n)}  & \\dots & S_{1,k}^{(n)} \\\\\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "我们注意到:\n",
+    "- step3中$Y$求解第一项中求和元素$\\sum_{i=1}^{p} v_f^{(i)}$和 $ \\vec{x_i} $ 的乘积恰好等于$XV$的第$i$列:\n",
+    "$$\n",
+    "v_f^{(i)} \\vec{x_i} = \\begin{pmatrix}\n",
+    "  v_f^{(i)} x_i^{(1)}  \\\\\n",
+    "  ... \\\\\n",
+    "  v_f^{(i)} x_i^{(n)}\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "- 因此step3中第一项$\\frac{1}{2} \\sum_{f=1}^{k}  \\big(\\sum_{i=1}^{p} v_f^{(i)} \\vec{x_i} \\big)^2$等价于$XV$的元素级平方$(XV)^2 = (XV) \\odot (XV)$.\n",
+    "我们定义一个运算表示对矩阵的列求和: $\\sigma_{(1)}(B)$表示对矩阵$B$的列向量求和. 因此有:\n",
+    "$$\n",
+    "\\frac{1}{2} \\sum_{f=1}^{k}  \\big(\\sum_{i=1}^{p} v_f^{(i)} \\vec{x_i} \\big)^2\n",
+    "=\\frac{1}{2} \\sigma_{(1)}((XV) \\odot (XV))\n",
+    "$$\n",
+    "\n",
+    "- 同理step3中的第二项中求和元素$ \\sum_{i=1}^{p}v_f^{(i) 2} \\vec{x_i}^2$可以视为$(X \\odot X) \\dot (V \\odot V)$的第$i$列, 第二项可以视为$(X \\odot X) \\dot (V \\odot V)$的列向量求和:\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{2} \\sum_{f=1}^{k}  \\big( \\sum_{i=1}^{p}v_f^{(i) 2} \\vec{x_i}^2 \\big)\n",
+    "=\\frac{1}{2} \\sigma_{(1)}((X \\odot X) \\dot (V \\odot V))\n",
+    "$$\n",
+    "\n",
+    "因此最终的矩阵表达式为:\n",
+    "\n",
+    "$$\n",
+    "Y = w_0 + X w + \\frac{1}{2} \\sigma_{(1)}((XV) \\odot (XV)) - \\frac{1}{2} \\sigma_{(1)}((X \\odot X) \\dot (V \\odot V))\n",
+    "$$\n",
+    "其中:\n",
+    "- $w_0$为截距项;\n",
+    "- $w$为线性项系数;\n",
+    "- $V$为交叉项的隐式特征;\n",
+    "- $\\odot$为元素级乘法;\n",
+    "- $\\sigma_{(1)}(B)$表示对矩阵$B$的列向量求和\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
