因子分解机

--- a/snippets-ml/02-regression/0002-factorized-machine.ipynb
+++ b/snippets-ml/02-regression/0002-factorized-machine.ipynb
@@ -11,34 +11,75 @@
    "source": [
     "# FM(Factorized Machine)因子分解机\n",
     "\n",
-    "该方法常用的场景是推荐，在snippets-rec中会有FM及其衍生算法的介绍。从ml的角度看，该算法不仅仅是一个回归算法, 也可以用于分类、排序等等。"
+    "该方法常用的场景是推荐，在snippets-rec中会有FM及其衍生算法的介绍。该算法不仅仅是一个回归算法, 也可以用于分类、排序等等。"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## 1.1 简介\n",
-    "FM可以视为线性回归引入特征交叉的一种演进:\n",
+    "## 1 简介\n",
     "\n",
-    "1)线性回归引入特征交叉\n",
+    "### 1.1 FM视为线性模型引入特征交叉\n",
+    "- **特征交叉在处理多因素交互作用时是十分必要的.**\n",
+    "如预测购买商品的任务中, 年龄=7岁 + 女孩 = 童装连衣裙。\n",
+    "\n",
+    "- 传统线性回归引入交叉项: 二阶多项式回归\n",
     "$$\n",
     "\\hat{y}(x)=w_0 + \\underbrace{\\sum_{i=1}^p w_i x_i}_{\\text {线性回归 }}+\\underbrace{\\sum_{i=1}^p \\sum_{j=i+1}^p w_{i j} x_i x_j}_{\\text {交叉项 (组合待征) }}\n",
     "$$\n",
     "\n",
     "其中样本$x_i$为样本x的第$i$维特征，$p$为维数.\n",
-    "但在当x为稀疏数据时（如商品类别或标签）维度可能有几万甚至上百万。交叉项会有维度爆炸，同时绝大多数维度是不相关的，导致交叉项非常稀疏，很难学习。因此FM通过矩阵分解对矩阵$V$进行了近似.\n",
     "\n",
-    "2)FM: 通过矩阵分解对交叉项进行近似\n",
+    "当$X$中包含稀疏特征(如商品类别/商品标签, onehot encode后可能几万个维度)时, 有以下致命弱点:\n",
+    "1)交叉项会有维度爆炸;\n",
+    "2)参数数目极大, 过拟合;\n",
+    "3)绝大多数维度是不相关的，导致交叉项非常稀疏，很难学习。\n",
+    "\n",
+    "- FM: 通过矩阵分解对交叉项进行近似\n",
+    "因此FM通过矩阵分解对矩阵$W$进行了低秩近似.$W \\approx V \\cdot V^t$，其中$V \\in \\mathbb{R}^{p \\times k}$.\n",
+    "1）稀疏特征场景下, $p$通常比较大, $k$往往小于$p$. FM能有效降低参数数目，防止模型泛化能力不足；\n",
+    "\n",
+    "2）极端情况, 当k足够大时，FM模型等价于线性回归中引入交叉项。\n",
+    "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "交叉相部分= \\\\\n",
-    "& \\sum_{i=1}^{p} \\sum_{j=i+1}^p\\left\\langle\\mathbf{v}_i, \\mathbf{v}_j\\right\\rangle x_i x_j \\\\\n",
-    "= & \\frac{1}{2} \\sum_{i=1}^p \\sum_{j=1}^p\\left\\langle\\mathbf{v}_i, \\mathbf{v}_j\\right\\rangle x_i x_j-\\frac{1}{2} \\sum_{i=1}^p\\left\\langle\\mathbf{v}_i, \\mathbf{v}_i\\right\\rangle x_i x_i \\\\\n",
+    "& \\sum_{i=1}^{p} \\sum_{j=i+1}^p (\\vec {\\mathbf{v}_i} \\cdot \\vec {\\mathbf{v}_j} ) x_i x_j \\\\\n",
+    "= & \\frac{1}{2} \\sum_{i=1}^p \\sum_{j=1}^p (\\vec {\\mathbf{v}_i} \\cdot \\vec {\\mathbf{v}_j} ) x_i x_j-\\frac{1}{2} \\sum_{i=1}^p (\\vec {\\mathbf{v}_i} \\cdot \\vec {\\mathbf{v}_j} ) x_i x_i \\\\\n",
     "= & \\frac{1}{2}\\left(\\sum_{i=1}^p \\sum_{j=1}^p \\sum_{f=1}^k v_{i, f} v_{j, f} x_i x_j-\\sum_{i=1}^p \\sum_{f=1}^k v_{i, f} v_{i, f} x_i x_i\\right) \\\\\n",
     "= & \\frac{1}{2} \\sum_{f=1}^k\\left(\\left(\\sum_{i=1}^{p} v_{i, f} x_i\\right)\\left(\\sum_{j=1}^{p} v_{j, f} x_j\\right)-\\sum_{i=1}^{p} v_{i, f}^2 x_i^{2}\\right) \\\\\n",
     "= & \\frac{1}{2} \\sum_{f=1}^k\\left(\\left ( \\sum_{i=1}^{p} v_{i, f} x_i \\right)^{2}-\\sum_{i=1}^{p} v_{i, f}^2 x_i^{2}\\right)\n",
     "\\end{aligned}\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "FM解决了暴力引进交叉项在稀疏特征场景下的缺点:\n",
+    "1)参数数目降低, 通常$k$都远小于$p$, 增加模型泛化能力;\n",
+    "2)通过矩阵分解来低秩近似交叉项稀疏, 保留了模型的表达能力;"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.2 FM与因式分解\n",
+    "FM是对因式分解的扩展, 其表达能力比隐式分解更高.\n",
+    "- FM:\n",
+    "每一个特征都会有其隐向量, 特征交叉时, 交叉特征的权重为两特征隐向量的内积.\n",
+    "\n",
+    "- 因式分解:\n",
+    "因式分解分解了两组变量的相关关系. 以推荐场景为例, 对用户~物品矩阵进行分解, 可以得到两组隐向量, 分别代表物品和用户.\n",
+    "\n",
+    "- 因式分解可以看做FM的特殊情况\n",
+    "用户U和物品I都以onehot形式作为特征, 则FM可以得到一组隐向量, 包含了用户onehot特征对应的隐向量和物品onehot特征对应的隐向量, 此时能够得到等价于因式分解的表达效果.\n",
+    "$$\n",
+    "y = w_0 + w_u + w_i + \\mathbb{v_u} \\cdot \\mathbb{v_i}\n",
+    "$$\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
