代数矩阵求解罗列了框架

--- a/snippets-ml/02-regression/0002-factorized-machine.ipynb
+++ b/snippets-ml/02-regression/0002-factorized-machine.ipynb
@@ -95,7 +95,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "上述为y关于x的分布的表达式（还缺一个残差项，如正态分布的残差）。\n",
     "下面我们将上述表达式以样本形式矩阵化，方便机器学习和深度学习引擎求解，通过下面几步阐述：\n",
     "step 1)假定共有$n$个样本，即$X \\in \\mathbb{R}^{n \\times p}$，$Y \\in \\mathbb{R}^{n}$\n",
     "$$\n",
@@ -142,8 +141,7 @@
     " \\vdots \\ & \\ddots \\ & \\vdots \\\\\n",
     "S_{1,1}^{(n)}  & \\dots & S_{1,k}^{(n)} \\\\\n",
     "\\end{bmatrix}\n",
-    "$$\n",
-    "\n"
+    "$$\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -172,17 +170,17 @@
     "=\\frac{1}{2} \\sigma_{(1)}((XV) \\odot (XV))\n",
     "$$\n",
     "\n",
-    "- 同理step3中的第二项中求和元素$ \\sum_{i=1}^{p}v_f^{(i) 2} \\vec{x_i}^2$可以视为$(X \\odot X) \\dot (V \\odot V)$的第$i$列, 第二项可以视为$(X \\odot X) \\dot (V \\odot V)$的列向量求和:\n",
+    "- 同理step3中的第二项中求和元素$ \\sum_{i=1}^{p}v_f^{(i) 2} \\vec{x_i}^2$可以视为$(X \\odot X) \\cdot (V \\odot V)$的第$i$列, 第二项可以视为$(X \\odot X) \\cdot (V \\odot V)$的列向量求和:\n",
     "\n",
     "$$\n",
     "\\frac{1}{2} \\sum_{f=1}^{k}  \\big( \\sum_{i=1}^{p}v_f^{(i) 2} \\vec{x_i}^2 \\big)\n",
-    "=\\frac{1}{2} \\sigma_{(1)}((X \\odot X) \\dot (V \\odot V))\n",
+    "=\\frac{1}{2} \\sigma_{(1)}((X \\odot X) \\cdot (V \\odot V))\n",
     "$$\n",
     "\n",
     "因此最终的矩阵表达式为:\n",
     "\n",
     "$$\n",
-    "Y = w_0 + X w + \\frac{1}{2} \\sigma_{(1)}((XV) \\odot (XV)) - \\frac{1}{2} \\sigma_{(1)}((X \\odot X) \\dot (V \\odot V))\n",
+    "Y = w_0 + X w + \\frac{1}{2} \\sigma_{(1)}((XV) \\odot (XV)) - \\frac{1}{2} \\sigma_{(1)}((X \\odot X) \\cdot (V \\odot V))\n",
     "$$\n",
     "其中:\n",
     "- $w_0$为截距项;\n",
