--- a/snippets-ml/01-base/常见机器学习任务分类.ipynb
+++ b/snippets-ml/01-base/常见机器学习任务分类.ipynb
@@ -46,14 +46,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "常见激活函数(连接函数):"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "$$\n",
+    "        \\text{Hardsigmoid}(x) = \\begin{cases}\n",
+    "            0 & \\text{if~} x \\le -3, \\\\\n",
+    "            1 & \\text{if~} x \\ge +3, \\\\\n",
+    "            x / 6 + 1 / 2 \\ \\ & \\text{otherwise}\n",
+    "        \\end{cases}\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
