--- a/snippets-ml/05-ensemble/xgboost.ipynb
+++ b/snippets-ml/05-ensemble/xgboost.ipynb
@@ -20,6 +20,34 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## 什么是加性模型(additive model)?\n",
+    "\n",
+    "$$\n",
+    "H(\\boldsymbol{x})=\\sum_{t=1}^T \\alpha_t h_t(\\boldsymbol{x})\n",
+    "$$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## AdaBoost\n",
     "机器学习的本质是对根据数据给出特定假定，构建模型，将其作为一个数值优化问题。\n",
     "AdaBoost这类模型也类似, 通过梯度下降添加弱学习器来最小化模型损失。\n",
