--- a/snippets-ml/01-base/GridSearch进行参数调优.ipynb
+++ b/snippets-ml/01-base/GridSearch进行参数调优.ipynb
@@ -273,7 +273,7 @@
     "    # 使用网格搜索找到最佳参数\n",
     "    grid_search = GridSearchCV(\n",
     "        pipeline, param_grid, cv=5, scoring='accuracy', n_jobs=-1, verbose=2\n",
-    "    )\n",
+    "    )  # scoring='f1_macro', score='f1_'\n",
     "\n",
     "    # 训练模型\n",
     "    print(\"开始训练模型...\")\n",
